separated the base64 fonts

--- a/index.html
+++ b/index.html
@@ -57,10 +57,10 @@
             <option value="2">Technik fizjoterapeuta</option>
         </select><br>
 
-        <button type="button" onclick="handleForm()">Wyslij wniosek</button>
+        <button id="GenPdf" type="button">Wyslij wniosek</button>
     </form>
     </div>
+    <script type="module" src="script.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/3.0.1/jspdf.umd.min.js"></script>
-    <script src="script.js"></script>
 </body>
 </html>
